fixes swagger project endpoint doc
